Bug 65333 - Fix speech input icon rect on RTL directions
Summary: Fix speech input icon rect on RTL directions
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Text (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Leandro Graciá Gil
URL:
Keywords:
Depends on:
Blocks: 39485
  Show dependency treegraph
 
Reported: 2011-07-28 11:38 PDT by Leandro Graciá Gil
Modified: 2011-07-29 05:49 PDT (History)
2 users (show)

See Also:


Attachments
Patch (1.75 KB, patch)
2011-07-28 11:51 PDT, Leandro Graciá Gil
tonyg: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Leandro Graciá Gil 2011-07-28 11:38:15 PDT
Currently when using speech input the rect containing the whole input element is provided to the client so it can show any popup of their choice when the recognition starts. However this fails in right-to-left text environments because it assumes the icon to be always on the right. This patch fixes this problem by returning the rect of the speech icon itself instead of the whole input element.
Comment 1 Leandro Graciá Gil 2011-07-28 11:51:11 PDT
Created attachment 102279 [details]
Patch
Comment 2 Leandro Graciá Gil 2011-07-29 05:49:19 PDT
Committed r91988: <http://trac.webkit.org/changeset/91988>