Fix speech input icon rect on RTL directions. https://bugs.webkit.org/show_bug.cgi?id=65333

Reviewed by Tony Gentilcore.

No new tests. This is used by platforms, not WebCore, and
the base functionality is not changed but only the failing cases.

* html/shadow/TextControlInnerElements.cpp:
(WebCore::InputFieldSpeechButtonElement::defaultEventHandler):

Canonical link: https://commits.webkit.org/81145@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91988 268f45cc-cd09-0410-ab3c-d52691b4dbfc